--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ai-for-floating-learning-companion",
+  "name": "zennote-ai",
   "private": true,
   "version": "0.0.0",
   "type": "module",
