--- a/package.json
+++ b/package.json
@@ -1,23 +1,22 @@
+
 {
-  "name": "zennote-ai",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
+  "name": "zen-note-ai",
+  "version": "1.0.0",
+  "description": "AI-powered floating study companion",
+  "main": "main.js",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "react": "^19.2.3",
-    "recharts": "^3.6.0",
-    "react-dom": "^19.2.3",
-    "@google/genai": "^1.34.0"
+    "start": "electron .",
+    "build": "electron-builder"
   },
   "devDependencies": {
-    "@types/node": "^22.14.0",
-    "@vitejs/plugin-react": "^5.0.0",
-    "typescript": "~5.8.2",
-    "vite": "^6.2.0"
+    "electron": "^28.0.0",
+    "electron-builder": "^24.9.1"
+  },
+  "build": {
+    "appId": "com.zennote.ai",
+    "win": {
+      "target": "portable",
+      "icon": "https://cdn-icons-png.flaticon.com/512/566/566437.png"
+    }
   }
 }
