--- a/package.json
+++ b/package.json
@@ -5,18 +5,34 @@
   "description": "AI-powered floating study companion",
   "main": "main.js",
   "scripts": {
+    "dev": "vite",
     "start": "electron .",
-    "build": "electron-builder"
+    "build": "vite build && electron-builder"
   },
   "devDependencies": {
     "electron": "^28.0.0",
-    "electron-builder": "^24.9.1"
+    "electron-builder": "^24.9.1",
+    "vite": "^5.0.0",
+    "@vitejs/plugin-react": "^4.2.0",
+    "typescript": "^5.0.0"
+  },
+  "dependencies": {
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
+    "recharts": "^3.6.0",
+    "@google/genai": "^1.34.0"
   },
   "build": {
     "appId": "com.zennote.ai",
+    "directories": {
+      "output": "dist_electron"
+    },
     "win": {
-      "target": "portable",
-      "icon": "https://cdn-icons-png.flaticon.com/512/566/566437.png"
-    }
+      "target": "portable"
+    },
+    "files": [
+      "dist/**/*",
+      "main.js"
+    ]
   }
 }
