feat(electron): Configure electron mirror for downloads
Adds a mirror configuration to `package.json` for electron downloads, ensuring more reliable and faster package retrieval.

--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
     "directories": {
       "output": "dist_electron"
     },
+    "electronDownload": {
+      "mirror": "https://npmmirror.com/mirrors/electron/"
+    },
     "win": {
       "target": [
         "dir",
