feat: Add system tray and window hide functionality
Introduces a system tray icon for ZenNote AI. The tray icon allows users to show the main window or quit the application. Additionally, the main window now hides instead of closes when the user clicks the close button, providing a more seamless background operation experience. This change also refines the build configuration to specifically target a 'dir' executable for Windows.

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "dev": "vite",
     "start": "electron .",
-    "build": "vite build && electron-builder",
+    "build": "vite build && electron-builder --win dir",
     "build:fast": "vite build && electron-builder --win dir"
   },
   "devDependencies": {
@@ -36,8 +36,7 @@
     },
     "win": {
       "target": [
-        "dir",
-        "portable"
+        "dir"
       ],
       "icon": "https://cdn-icons-png.flaticon.com/512/566/566437.png"
     },
