feat: Configure app icon and startup behavior
Updates the Electron build configuration to use a local icon file instead of a URL.
Adds functionality to automatically start the application at login for packaged builds.
Includes optimizations for hardware acceleration and multi-monitor environments.

--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
       "target": [
         "dir"
       ],
-      "icon": "https://cdn-icons-png.flaticon.com/512/566/566437.png"
+      "icon": "build/icon.ico"
     },
     "files": [
       "dist/**/*",
